<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <!-- header -->
        <TextView
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/change_password_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_25sdp"
            tools:ignore="MissingPrefix" />

        <!-- old password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/FieldsStyle"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/FloatingLabelStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>

        <!-- new password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/FieldsStyle"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/FloatingLabelStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>

        <!-- confrim password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:orientation="horizontal"
            android:theme="@style/FieldsStyle"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/FloatingLabelStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingTop="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <com.rey.material.widget.Button
            android:id="@+id/btnChangePassword"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="50"
            android:background="@color/colorPrimary"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleType="touch" />

        <com.rey.material.widget.Button
            android:id="@+id/btnCancel"
            fontPath="fonts/Roboto-Light.ttf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_weight="50"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleType="touch" />

    </LinearLayout>

</LinearLayout>

